force-app/main/default/objects/Grant__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date for the Grant</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>