force-app/main/default/objects/Grant__c/fields/Grant_Key__c.field-meta.xml
<CustomField>
    <fullName>Grant_Key__c</fullName>
    <description>External ID used for mapping between FIS and NVP</description>
    <label>Grant Key</label>
    <length>15</length>
    <type>Text</type>
</CustomField>