force-app/main/default/objects/Grant__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Checkbox used to indicate a grant is active.</description>
    <formula>AND(  TODAY()&gt;= Start_Date__c ,
TODAY()&lt;=  End_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>