force-app/main/default/objects/Grant__c/fields/Monthly_Hour_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Hour_Commitment__c</fullName>
    <description>Captures the monthly hour commitment for a grant in order for the associated stipend payment to be paid out.</description>
    <label>Monthly Hour Commitment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>