force-app/main/default/objects/Grant__c/fields/Pay_Frequency_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency_Code__c</fullName>
    <description>Captures the pay frequency for a given grant.</description>
    <inlineHelpText>Select the frequency by which stipends are paid for this grant (M = Monthly). If stipends are not paid for this grant, leave this field blank.</inlineHelpText>
    <label>Pay Frequency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>